# harbor

./: .gitignore  BUILD.bazel  WORKSPACE
src/chartserver/: BUILD.bazel
src/cmd/migrate-patch/: BUILD.bazel
src/common/api/: BUILD.bazel
src/common/config/: BUILD.bazel
src/common/config/encrypt/: BUILD.bazel
src/common/config/metadata/: BUILD.bazel
src/common/config/store/: BUILD.bazel
src/common/dao/: BUILD.bazel  pgsql.go
src/common/dao/clair/: BUILD.bazel
src/common/dao/group/: BUILD.bazel
src/common/dao/notification/: BUILD.bazel
src/common/dao/project/: BUILD.bazel
src/common/http/: BUILD.bazel
src/common/http/modifier/: BUILD.bazel
src/common/job/: BUILD.bazel
src/common/job/models/: BUILD.bazel
src/common/job/test/: BUILD.bazel
src/common/models/: BUILD.bazel
src/common/quota/: BUILD.bazel
src/common/quota/driver/: BUILD.bazel
src/common/rbac/: BUILD.bazel
src/common/rbac/project/: BUILD.bazel
src/common/registryctl/: BUILD.bazel
src/common/secret/: BUILD.bazel
src/common/security/: BUILD.bazel
src/common/security/admiral/: BUILD.bazel
src/common/security/local/: BUILD.bazel
src/common/security/robot/: BUILD.bazel
src/common/security/secret/: BUILD.bazel
src/common/token/: BUILD.bazel
src/common/utils/: BUILD.bazel  env.go
src/common/utils/clair/: BUILD.bazel
src/common/utils/email/: BUILD.bazel
src/common/utils/error/: BUILD.bazel
src/common/utils/ldap/: BUILD.bazel
src/common/utils/log/: BUILD.bazel
src/common/utils/notary/: BUILD.bazel
src/common/utils/oidc/: BUILD.bazel
src/common/utils/redis/: BUILD.bazel
src/common/utils/registry/: BUILD.bazel
src/common/utils/test/: BUILD.bazel
src/common/utils/uaa/: BUILD.bazel
src/core/: BUILD.bazel  main.go
src/core/api/: BUILD.bazel
src/core/api/models/: BUILD.bazel
src/core/api/quota/: BUILD.bazel
src/core/auth/: BUILD.bazel
src/core/auth/authproxy/: BUILD.bazel
src/core/auth/db/: BUILD.bazel
src/core/auth/ldap/: BUILD.bazel
src/core/auth/oidc/: BUILD.bazel
src/core/auth/uaa/: BUILD.bazel
src/core/config/: BUILD.bazel  config.go
src/core/controllers/: BUILD.bazel  auto_username.go  oidc.go
src/core/filter/: BUILD.bazel
src/core/filter/test/: BUILD.bazel
src/core/label/: BUILD.bazel
src/core/middlewares/: BUILD.bazel
src/core/middlewares/chart/: BUILD.bazel
src/core/middlewares/contenttrust/: BUILD.bazel
src/core/middlewares/countquota/: BUILD.bazel
src/core/middlewares/immutable/: BUILD.bazel
src/core/middlewares/interceptor/: BUILD.bazel
src/core/middlewares/listrepo/: BUILD.bazel
src/core/middlewares/multiplmanifest/: BUILD.bazel
src/core/middlewares/readonly/: BUILD.bazel
src/core/middlewares/registryproxy/: BUILD.bazel
src/core/middlewares/regtoken/: BUILD.bazel
src/core/middlewares/sizequota/: BUILD.bazel
src/core/middlewares/url/: BUILD.bazel
src/core/middlewares/util/: BUILD.bazel
src/core/middlewares/vulnerable/: BUILD.bazel
src/core/notifier/: BUILD.bazel
src/core/notifier/event/: BUILD.bazel
src/core/notifier/model/: BUILD.bazel
src/core/notifier/topic/: BUILD.bazel
src/core/promgr/: BUILD.bazel
src/core/promgr/metamgr/: BUILD.bazel
src/core/promgr/pmsdriver/: BUILD.bazel
src/core/service/notifications/: BUILD.bazel
src/core/service/token/: BUILD.bazel
src/core/systeminfo/: BUILD.bazel
src/core/systeminfo/imagestorage/: BUILD.bazel
src/core/utils/: BUILD.bazel
src/jobservice/: BUILD.bazel  main.go
src/jobservice/api/: BUILD.bazel
src/jobservice/common/query/: BUILD.bazel
src/jobservice/common/rds/: BUILD.bazel
src/jobservice/common/utils/: BUILD.bazel
src/jobservice/config/: BUILD.bazel
src/jobservice/core/: BUILD.bazel
src/jobservice/env/: BUILD.bazel
src/jobservice/errs/: BUILD.bazel
src/jobservice/hook/: BUILD.bazel
src/jobservice/job/: BUILD.bazel
src/jobservice/job/impl/: BUILD.bazel
src/jobservice/lcm/: BUILD.bazel
src/jobservice/logger/: BUILD.bazel
src/jobservice/logger/backend/: BUILD.bazel
src/jobservice/logger/getter/: BUILD.bazel
src/jobservice/logger/sweeper/: BUILD.bazel
src/jobservice/mgt/: BUILD.bazel
src/jobservice/migration/: BUILD.bazel
src/jobservice/period/: BUILD.bazel
src/jobservice/runner/: BUILD.bazel
src/jobservice/runtime/: BUILD.bazel
src/jobservice/tests/: BUILD.bazel
src/jobservice/worker/: BUILD.bazel
src/jobservice/worker/cworker/: BUILD.bazel
src/registryctl/: BUILD.bazel  main.go
src/registryctl/api/: BUILD.bazel
src/registryctl/auth/: BUILD.bazel
src/registryctl/client/: BUILD.bazel
src/registryctl/config/: BUILD.bazel
src/registryctl/handlers/: BUILD.bazel
src/replication/: BUILD.bazel
src/replication/adapter/: BUILD.bazel
src/replication/adapter/aliacr/: BUILD.bazel
src/replication/adapter/awsecr/: BUILD.bazel
src/replication/adapter/azurecr/: BUILD.bazel
src/replication/adapter/dockerhub/: BUILD.bazel
src/replication/adapter/gitlab/: BUILD.bazel
src/replication/adapter/googlegcr/: BUILD.bazel
src/replication/adapter/harbor/: BUILD.bazel
src/replication/adapter/helmhub/: BUILD.bazel
src/replication/adapter/huawei/: BUILD.bazel
src/replication/adapter/jfrog/: BUILD.bazel
src/replication/adapter/native/: BUILD.bazel
src/replication/adapter/quayio/: BUILD.bazel
src/replication/config/: BUILD.bazel
src/replication/dao/: BUILD.bazel
src/replication/dao/models/: BUILD.bazel
src/replication/event/: BUILD.bazel
src/replication/filter/: BUILD.bazel
src/replication/model/: BUILD.bazel
src/replication/operation/: BUILD.bazel
src/replication/operation/execution/: BUILD.bazel
src/replication/operation/flow/: BUILD.bazel
src/replication/operation/hook/: BUILD.bazel
src/replication/operation/scheduler/: BUILD.bazel
src/replication/policy/: BUILD.bazel
src/replication/policy/controller/: BUILD.bazel
src/replication/registry/: BUILD.bazel
src/replication/transfer/: BUILD.bazel
src/replication/util/: BUILD.bazel
src/testing/: BUILD.bazel
src/testing/clients/: BUILD.bazel
src/testing/job/: BUILD.bazel
(+122 files in other folders)
