load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "router.go",
    ],
    importpath = "github.com/goharbor/harbor/src/core",
    visibility = ["//visibility:private"],
    deps = [
        "//src/common:go_default_library",
        "//src/common/dao:go_default_library",
        "//src/common/job:go_default_library",
        "//src/common/models:go_default_library",
        "//src/common/utils:go_default_library",
        "//src/common/utils/log:go_default_library",
        "//src/core/api:go_default_library",
        "//src/core/auth/authproxy:go_default_library",
        "//src/core/auth/db:go_default_library",
        "//src/core/auth/ldap:go_default_library",
        "//src/core/auth/uaa:go_default_library",
        "//src/core/config:go_default_library",
        "//src/core/controllers:go_default_library",
        "//src/core/filter:go_default_library",
        "//src/core/middlewares:go_default_library",
        "//src/core/service/notifications/admin:go_default_library",
        "//src/core/service/notifications/clair:go_default_library",
        "//src/core/service/notifications/jobs:go_default_library",
        "//src/core/service/notifications/registry:go_default_library",
        "//src/core/service/notifications/scheduler:go_default_library",
        "//src/core/service/token:go_default_library",
        "//src/pkg/scheduler:go_default_library",
        "//src/replication:go_default_library",
        "//src/vendor/github.com/astaxie/beego:go_default_library",
        "//src/vendor/github.com/astaxie/beego/session/redis:go_default_library",
    ],
)

go_binary(
    name = "core",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    data = [
        # ":migrations",
        ":view_templates",
    ],
)

load("@bazel_tools//tools/build_defs/pkg:pkg.bzl", "pkg_tar")

pkg_tar(
    name = "migrations",
    package_dir = "/app/migrations/postgresql",
    mode = "0444",
    srcs = ["//make/migrations:postgresql"],
)

pkg_tar(
    name = "view_templates",
    package_dir = "/app/templates",
    mode = "0444",
    srcs = glob([
        "views/**",
    ]),
)

load("@io_bazel_rules_docker//container:container.bzl", "container_image", "container_layer")

container_image(
    name = "migrations_image",
    base = "@go_image_base//image",
    tars = [
        ":migrations",
        ":view_templates",
    ],
    env = {
        "POSTGRES_MIGRATION_SCRIPTS_PATH": "/app/migrations/postgresql/",
        "WEB_TEMPLATES_PATH": "/app/templates/",
    },
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    base = ":migrations_image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
