load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/goharbor/harbor/src/jobservice",
    visibility = ["//visibility:private"],
    deps = [
        "//src/common:go_default_library",
        "//src/common/config:go_default_library",
        "//src/common/utils:go_default_library",
        "//src/common/utils/log:go_default_library",
        "//src/jobservice/common/utils:go_default_library",
        "//src/jobservice/config:go_default_library",
        "//src/jobservice/job:go_default_library",
        "//src/jobservice/job/impl:go_default_library",
        "//src/jobservice/logger:go_default_library",
        "//src/jobservice/runtime:go_default_library",
    ],
)

go_binary(
    name = "jobservice",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

load("@io_bazel_rules_docker//go:image.bzl", "go_image")

go_image(
    name = "image",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
