load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["replication.go"],
    importpath = "github.com/goharbor/harbor/src/replication",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common/job:go_default_library",
        "//src/common/utils/log:go_default_library",
        "//src/core/config:go_default_library",
        "//src/replication/adapter/aliacr:go_default_library",
        "//src/replication/adapter/awsecr:go_default_library",
        "//src/replication/adapter/azurecr:go_default_library",
        "//src/replication/adapter/dockerhub:go_default_library",
        "//src/replication/adapter/gitlab:go_default_library",
        "//src/replication/adapter/googlegcr:go_default_library",
        "//src/replication/adapter/harbor:go_default_library",
        "//src/replication/adapter/helmhub:go_default_library",
        "//src/replication/adapter/huawei:go_default_library",
        "//src/replication/adapter/jfrog:go_default_library",
        "//src/replication/adapter/native:go_default_library",
        "//src/replication/adapter/quayio:go_default_library",
        "//src/replication/config:go_default_library",
        "//src/replication/event:go_default_library",
        "//src/replication/operation:go_default_library",
        "//src/replication/policy:go_default_library",
        "//src/replication/policy/controller:go_default_library",
        "//src/replication/registry:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["replication_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//src/core/config:go_default_library",
        "//src/vendor/github.com/stretchr/testify/assert:go_default_library",
        "//src/vendor/github.com/stretchr/testify/require:go_default_library",
    ],
)
