load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "chart_utility.go",
        "scheduler.go",
    ],
    importpath = "github.com/goharbor/harbor/src/testing",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common/utils/log:go_default_library",
        "//src/pkg/scheduler/model:go_default_library",
    ],
)
