load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "chart_utility.go",
        "scheduler.go",
        "suite.go",
    ],
    importpath = "github.com/goharbor/harbor/src/testing",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common/dao:go_default_library",
        "//src/common/models:go_default_library",
        "//src/common/utils/log:go_default_library",
        "//src/core/config:go_default_library",
        "//src/pkg/scheduler/model:go_default_library",
        "//src/pkg/types:go_default_library",
        "//src/vendor/github.com/stretchr/testify/suite:go_default_library",
    ],
)
