load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/goharbor/harbor/src/cmd/migrate-patch",
    visibility = ["//visibility:private"],
    deps = ["//src/vendor/github.com/lib/pq:go_default_library"],
)

go_binary(
    name = "migrate-patch",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
