load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["base.go"],
    importpath = "github.com/goharbor/harbor/src/common/api",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common/http:go_default_library",
        "//src/common/utils/log:go_default_library",
        "//src/vendor/github.com/astaxie/beego:go_default_library",
        "//src/vendor/github.com/astaxie/beego/validation:go_default_library",
        "//src/vendor/github.com/pkg/errors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["base_test.go"],
    embed = [":go_default_library"],
)
