load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "keyprovider.go",
        "manager.go",
    ],
    importpath = "github.com/goharbor/harbor/src/common/config",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:go_default_library",
        "//src/common/config/metadata:go_default_library",
        "//src/common/config/store:go_default_library",
        "//src/common/config/store/driver:go_default_library",
        "//src/common/http/modifier/auth:go_default_library",
        "//src/common/models:go_default_library",
        "//src/common/utils:go_default_library",
        "//src/common/utils/log:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "keyprovider_test.go",
        "manager_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//src/common/utils/test:go_default_library",
        "//src/vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
