load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "accesslog.go",
        "admin_job.go",
        "artifact.go",
        "artifact_blob.go",
        "base.go",
        "blob.go",
        "config.go",
        "cve_whitelist.go",
        "joblog.go",
        "label.go",
        "mysql.go",
        "oidc_user.go",
        "pgsql.go",
        "pro_meta.go",
        "project.go",
        "project_blob.go",
        "quota.go",
        "quota_usage.go",
        "register.go",
        "repository.go",
        "resource_label.go",
        "role.go",
        "sqlite.go",
        "testutils.go",
        "user.go",
        "utils.go",
        "version.go",
    ],
    importpath = "github.com/goharbor/harbor/src/common/dao",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:go_default_library",
        "//src/common/models:go_default_library",
        "//src/common/quota/driver:go_default_library",
        "//src/common/utils:go_default_library",
        "//src/common/utils/log:go_default_library",
        "//src/pkg/types:go_default_library",
        "//src/vendor/github.com/astaxie/beego/orm:go_default_library",
        "//src/vendor/github.com/docker/distribution:go_default_library",
        "//src/vendor/github.com/go-sql-driver/mysql:go_default_library",
        "//src/vendor/github.com/golang-migrate/migrate:go_default_library",
        "//src/vendor/github.com/golang-migrate/migrate/database/postgres:go_default_library",
        "//src/vendor/github.com/golang-migrate/migrate/source/file:go_default_library",
        "//src/vendor/github.com/lib/pq:go_default_library",
        "//src/vendor/github.com/pkg/errors:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "admin_job_test.go",
        "artifact_blob_test.go",
        "artifact_test.go",
        "blob_test.go",
        "config_test.go",
        "cve_whitelist_test.go",
        "dao_test.go",
        "joblog_test.go",
        "label_test.go",
        "oidc_user_test.go",
        "pro_meta_test.go",
        "project_blob_test.go",
        "project_test.go",
        "quota_test.go",
        "quota_usage_test.go",
        "repository_test.go",
        "resource_label_test.go",
        "user_test.go",
        "utils_test.go",
        "version_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//src/common:go_default_library",
        "//src/common/models:go_default_library",
        "//src/common/utils:go_default_library",
        "//src/common/utils/log:go_default_library",
        "//src/vendor/github.com/astaxie/beego/orm:go_default_library",
        "//src/vendor/github.com/docker/distribution:go_default_library",
        "//src/vendor/github.com/docker/distribution/manifest/schema2:go_default_library",
        "//src/vendor/github.com/opencontainers/go-digest:go_default_library",
        "//src/vendor/github.com/stretchr/testify/assert:go_default_library",
        "//src/vendor/github.com/stretchr/testify/require:go_default_library",
        "//src/vendor/github.com/stretchr/testify/suite:go_default_library",
    ],
)
