load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "error.go",
    ],
    importpath = "github.com/goharbor/harbor/src/common/http",
    visibility = ["//visibility:public"],
    deps = ["//src/common/http/modifier:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["error_test.go"],
    embed = [":go_default_library"],
    deps = ["//src/vendor/github.com/stretchr/testify/assert:go_default_library"],
)
