load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "client.go",
        "const.go",
        "parms.go",
    ],
    importpath = "github.com/goharbor/harbor/src/common/job",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common/http:go_default_library",
        "//src/common/http/modifier/auth:go_default_library",
        "//src/common/job/models:go_default_library",
        "//src/core/config:go_default_library",
        "//src/jobservice/job:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["client_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//src/common/job/models:go_default_library",
        "//src/common/job/test:go_default_library",
        "//src/vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
