load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "accesslog.go",
        "adminjob.go",
        "artifact.go",
        "artifact_blob.go",
        "authmodel.go",
        "base.go",
        "blob.go",
        "clair.go",
        "config.go",
        "cve_whitelist.go",
        "hook_notification.go",
        "job.go",
        "joblog.go",
        "label.go",
        "ldap.go",
        "member.go",
        "notification.go",
        "oidc_user.go",
        "pro_meta.go",
        "project.go",
        "project_blob.go",
        "quota.go",
        "quota_usage.go",
        "repo.go",
        "retag.go",
        "role.go",
        "token.go",
        "uaa.go",
        "user.go",
        "usergroup.go",
        "version.go",
    ],
    importpath = "github.com/goharbor/harbor/src/common/models",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:go_default_library",
        "//src/common/utils/notary/model:go_default_library",
        "//src/pkg/types:go_default_library",
        "//src/vendor/github.com/astaxie/beego/orm:go_default_library",
        "//src/vendor/github.com/astaxie/beego/validation:go_default_library",
        "//src/vendor/github.com/docker/distribution/manifest/schema2:go_default_library",
        "//src/vendor/github.com/theupdateframework/notary/tuf/data:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "cve_whitelist_test.go",
        "hook_notification_test.go",
        "label_test.go",
        "retag_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//src/vendor/github.com/astaxie/beego/validation:go_default_library",
        "//src/vendor/github.com/stretchr/testify/assert:go_default_library",
        "//src/vendor/github.com/stretchr/testify/require:go_default_library",
    ],
)
