load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "errors.go",
        "manager.go",
        "quota.go",
        "types.go",
        "util.go",
    ],
    importpath = "github.com/goharbor/harbor/src/common/quota",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common/dao:go_default_library",
        "//src/common/models:go_default_library",
        "//src/common/quota/driver:go_default_library",
        "//src/common/quota/driver/project:go_default_library",
        "//src/common/utils/log:go_default_library",
        "//src/pkg/types:go_default_library",
        "//src/vendor/github.com/astaxie/beego/orm:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "manager_test.go",
        "quota_test.go",
        "util_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//src/common/dao:go_default_library",
        "//src/common/models:go_default_library",
        "//src/common/quota/driver:go_default_library",
        "//src/common/quota/driver/mocks:go_default_library",
        "//src/common/quota/driver/project:go_default_library",
        "//src/pkg/types:go_default_library",
        "//src/vendor/github.com/stretchr/testify/mock:go_default_library",
        "//src/vendor/github.com/stretchr/testify/suite:go_default_library",
    ],
)
