load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "casbin.go",
        "const.go",
        "namespace.go",
        "parser.go",
        "rbac.go",
    ],
    importpath = "github.com/goharbor/harbor/src/common/rbac",
    visibility = ["//visibility:public"],
    deps = [
        "//src/vendor/github.com/casbin/casbin:go_default_library",
        "//src/vendor/github.com/casbin/casbin/model:go_default_library",
        "//src/vendor/github.com/casbin/casbin/persist:go_default_library",
        "//src/vendor/github.com/casbin/casbin/util:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "casbin_test.go",
        "namespace_test.go",
        "parser_test.go",
        "rbac_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//src/vendor/github.com/stretchr/testify/suite:go_default_library"],
)
