load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/goharbor/harbor/src/common/registryctl",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common:go_default_library",
        "//src/common/utils/log:go_default_library",
        "//src/registryctl/client:go_default_library",
    ],
)
