load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "request.go",
        "store.go",
    ],
    importpath = "github.com/goharbor/harbor/src/common/secret",
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = [
        "request_test.go",
        "store_test.go",
    ],
    embed = [":go_default_library"],
    deps = ["//src/vendor/github.com/stretchr/testify/assert:go_default_library"],
)
