load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["context.go"],
    importpath = "github.com/goharbor/harbor/src/common/security",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common/models:go_default_library",
        "//src/common/rbac:go_default_library",
    ],
)
