load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "claims.go",
        "htoken.go",
        "options.go",
    ],
    importpath = "github.com/goharbor/harbor/src/common/token",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common/rbac:go_default_library",
        "//src/common/utils/log:go_default_library",
        "//src/core/config:go_default_library",
        "//src/vendor/github.com/dgrijalva/jwt-go:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "claims_test.go",
        "htoken_test.go",
        "options_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//src/common/rbac:go_default_library",
        "//src/core/config:go_default_library",
        "//src/vendor/github.com/dgrijalva/jwt-go:go_default_library",
        "//src/vendor/github.com/stretchr/testify/assert:go_default_library",
    ],
)
