load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "encrypt.go",
        "env.go",
        "link.go",
        "timemarker.go",
        "utils.go",
        "validate.go",
    ],
    importpath = "github.com/goharbor/harbor/src/common/utils",
    visibility = ["//visibility:public"],
    deps = [
        "//src/common/utils/log:go_default_library",
        "//src/vendor/golang.org/x/crypto/pbkdf2:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "timemarker_test.go",
        "utils_test.go",
        "validate_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//src/vendor/github.com/stretchr/testify/assert:go_default_library",
        "//src/vendor/github.com/stretchr/testify/require:go_default_library",
    ],
)
