load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "admin_job.go",
        "base.go",
        "chart_label.go",
        "chart_repository.go",
        "config.go",
        "email.go",
        "health.go",
        "immutabletagrule.go",
        "internal.go",
        "label.go",
        "label_resource.go",
        "ldap.go",
        "log.go",
        "metadata.go",
        "notification_job.go",
        "notification_policy.go",
        "oidc.go",
        "pro_scanner.go",
        "project.go",
        "projectmember.go",
        "quota.go",
        "reg_gc.go",
        "registry.go",
        "replication_adapter.go",
        "replication_execution.go",
        "replication_policy.go",
        "repository.go",
        "repository_label.go",
        "retention.go",
        "robot.go",
        "scan.go",
        "scan_all.go",
        "scanners.go",
        "search.go",
        "statistic.go",
        "sys_cve_whitelist.go",
        "systeminfo.go",
        "user.go",
        "usergroup.go",
        "utils.go",
    ],
    importpath = "github.com/goharbor/harbor/src/core/api",
    visibility = ["//visibility:public"],
    deps = [
        "//src/chartserver:go_default_library",
        "//src/common:go_default_library",
        "//src/common/api:go_default_library",
        "//src/common/config:go_default_library",
        "//src/common/config/metadata:go_default_library",
        "//src/common/dao:go_default_library",
        "//src/common/dao/group:go_default_library",
        "//src/common/dao/project:go_default_library",
        "//src/common/http:go_default_library",
        "//src/common/job:go_default_library",
        "//src/common/models:go_default_library",
        "//src/common/quota:go_default_library",
        "//src/common/rbac:go_default_library",
        "//src/common/rbac/project:go_default_library",
        "//src/common/security:go_default_library",
        "//src/common/security/secret:go_default_library",
        "//src/common/utils:go_default_library",
        "//src/common/utils/email:go_default_library",
        "//src/common/utils/error:go_default_library",
        "//src/common/utils/ldap:go_default_library",
        "//src/common/utils/log:go_default_library",
        "//src/common/utils/notary:go_default_library",
        "//src/common/utils/notary/model:go_default_library",
        "//src/common/utils/oidc:go_default_library",
        "//src/common/utils/registry:go_default_library",
        "//src/common/utils/registry/auth:go_default_library",
        "//src/core/api/models:go_default_library",
        "//src/core/api/quota:go_default_library",
        "//src/core/auth:go_default_library",
        "//src/core/config:go_default_library",
        "//src/core/filter:go_default_library",
        "//src/core/label:go_default_library",
        "//src/core/middlewares:go_default_library",
        "//src/core/notifier/event:go_default_library",
        "//src/core/promgr:go_default_library",
        "//src/core/promgr/metamgr:go_default_library",
        "//src/core/service/token:go_default_library",
        "//src/core/systeminfo:go_default_library",
        "//src/core/systeminfo/imagestorage:go_default_library",
        "//src/core/utils:go_default_library",
        "//src/jobservice/job:go_default_library",
        "//src/jobservice/logger:go_default_library",
        "//src/pkg/art:go_default_library",
        "//src/pkg/immutabletag:go_default_library",
        "//src/pkg/immutabletag/match/rule:go_default_library",
        "//src/pkg/immutabletag/model:go_default_library",
        "//src/pkg/notification:go_default_library",
        "//src/pkg/project:go_default_library",
        "//src/pkg/q:go_default_library",
        "//src/pkg/repository:go_default_library",
        "//src/pkg/retention:go_default_library",
        "//src/pkg/retention/policy:go_default_library",
        "//src/pkg/retention/q:go_default_library",
        "//src/pkg/robot:go_default_library",
        "//src/pkg/robot/model:go_default_library",
        "//src/pkg/scan/all:go_default_library",
        "//src/pkg/scan/api/scan:go_default_library",
        "//src/pkg/scan/api/scanner:go_default_library",
        "//src/pkg/scan/dao/scanner:go_default_library",
        "//src/pkg/scan/errs:go_default_library",
        "//src/pkg/scan/report:go_default_library",
        "//src/pkg/scan/rest/v1:go_default_library",
        "//src/pkg/scan/vuln:go_default_library",
        "//src/pkg/scan/whitelist:go_default_library",
        "//src/pkg/scheduler:go_default_library",
        "//src/pkg/types:go_default_library",
        "//src/pkg/version:go_default_library",
        "//src/replication:go_default_library",
        "//src/replication/adapter:go_default_library",
        "//src/replication/dao/models:go_default_library",
        "//src/replication/event:go_default_library",
        "//src/replication/model:go_default_library",
        "//src/replication/policy:go_default_library",
        "//src/replication/registry:go_default_library",
        "//src/vendor/github.com/docker/distribution/health:go_default_library",
        "//src/vendor/github.com/docker/distribution/manifest/schema1:go_default_library",
        "//src/vendor/github.com/docker/distribution/manifest/schema2:go_default_library",
        "//src/vendor/github.com/ghodss/yaml:go_default_library",
        "//src/vendor/github.com/gomodule/redigo/redis:go_default_library",
        "//src/vendor/github.com/pkg/errors:go_default_library",
        "//src/vendor/gopkg.in/ldap.v2:go_default_library",
        "//src/vendor/k8s.io/helm/cmd/helm/search:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "api_test.go",
        "chart_label_test.go",
        "chart_repository_test.go",
        "config_test.go",
        "dataprepare_test.go",
        "email_test.go",
        "harborapi_test.go",
        "health_test.go",
        "immutabletagrule_test.go",
        "internal_test.go",
        "label_test.go",
        "log_test.go",
        "metadata_test.go",
        "notification_job_test.go",
        "notification_policy_test.go",
        "oidc_test.go",
        "pro_scanner_test.go",
        "project_test.go",
        "projectmember_test.go",
        "quota_test.go",
        "reg_gc_test.go",
        "registry_test.go",
        "replication_adapter_test.go",
        "replication_execution_test.go",
        "replication_policy_test.go",
        "repository_label_test.go",
        "repository_test.go",
        "retention_test.go",
        "robot_test.go",
        "scan_all_test.go",
        "scan_test.go",
        "scanners_test.go",
        "search_test.go",
        "statistic_test.go",
        "sys_cve_whitelist_test.go",
        "systeminfo_test.go",
        "user_test.go",
        "usergroup_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//src/chartserver:go_default_library",
        "//src/common:go_default_library",
        "//src/common/api:go_default_library",
        "//src/common/dao:go_default_library",
        "//src/common/dao/group:go_default_library",
        "//src/common/dao/project:go_default_library",
        "//src/common/http:go_default_library",
        "//src/common/job/test:go_default_library",
        "//src/common/models:go_default_library",
        "//src/common/quota:go_default_library",
        "//src/common/quota/driver:go_default_library",
        "//src/common/quota/driver/mocks:go_default_library",
        "//src/common/rbac:go_default_library",
        "//src/common/utils/oidc:go_default_library",
        "//src/common/utils/test:go_default_library",
        "//src/core/api/models:go_default_library",
        "//src/core/api/quota:go_default_library",
        "//src/core/auth/db:go_default_library",
        "//src/core/auth/ldap:go_default_library",
        "//src/core/config:go_default_library",
        "//src/core/filter:go_default_library",
        "//src/core/promgr/metamgr:go_default_library",
        "//src/jobservice/job:go_default_library",
        "//src/pkg/immutabletag:go_default_library",
        "//src/pkg/immutabletag/model:go_default_library",
        "//src/pkg/notification:go_default_library",
        "//src/pkg/notification/model:go_default_library",
        "//src/pkg/q:go_default_library",
        "//src/pkg/retention/dao:go_default_library",
        "//src/pkg/retention/dao/models:go_default_library",
        "//src/pkg/retention/policy:go_default_library",
        "//src/pkg/retention/policy/rule:go_default_library",
        "//src/pkg/robot/model:go_default_library",
        "//src/pkg/scan/all:go_default_library",
        "//src/pkg/scan/api/scan:go_default_library",
        "//src/pkg/scan/api/scanner:go_default_library",
        "//src/pkg/scan/dao/scan:go_default_library",
        "//src/pkg/scan/dao/scanner:go_default_library",
        "//src/pkg/scan/report:go_default_library",
        "//src/pkg/scan/rest/v1:go_default_library",
        "//src/pkg/scan/scanner:go_default_library",
        "//src/pkg/types:go_default_library",
        "//src/replication:go_default_library",
        "//src/replication/adapter:go_default_library",
        "//src/replication/dao:go_default_library",
        "//src/replication/dao/models:go_default_library",
        "//src/replication/model:go_default_library",
        "//src/testing:go_default_library",
        "//src/testing/apitests/apilib:go_default_library",
        "//src/vendor/github.com/astaxie/beego:go_default_library",
        "//src/vendor/github.com/dghubble/sling:go_default_library",
        "//src/vendor/github.com/docker/distribution/health:go_default_library",
        "//src/vendor/github.com/pkg/errors:go_default_library",
        "//src/vendor/github.com/stretchr/testify/assert:go_default_library",
        "//src/vendor/github.com/stretchr/testify/mock:go_default_library",
        "//src/vendor/github.com/stretchr/testify/require:go_default_library",
        "//src/vendor/github.com/stretchr/testify/suite:go_default_library",
        "//src/vendor/k8s.io/helm/cmd/helm/search:go_default_library",
        "//src/vendor/k8s.io/helm/pkg/repo:go_default_library",
    ],
)
